--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -79,3 +79,16 @@ section.cart {
 .amount {
   color: var(--primary);
 }
+
+section.login {
+  background: var(--secondary);
+  min-height: calc(100vh - 86px);
+}
+
+section.login a {
+  color: var(--primary);
+}
+
+section.login a:hover {
+  color: var(--primary-hover);
+}
